--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     top: 0;
     margin-top: 0;
+    left: 0;
+    right: 0;
+    margin-left: 0;
 }
 
 
@@ -28,6 +31,8 @@ body {
     list-style: none;
     list-style-type: none;
 } */
+
+
 
 .menu-item {
     color: white;
