--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
     margin-top: 0;
     z-index: 8;
     list-style: none;
+    height: 50px;
 
 }
 
@@ -47,8 +48,6 @@ body {
 .logo {
     display: none;
     position: fixed;
-    text-align: center;
-    padding-left: 250px;
     padding-top: 10px;
 }
 
@@ -193,6 +192,7 @@ span {
         text-decoration: none;
         list-style: none;
         list-style-type: none;
+        
     }
 
     .menu-lista {
